# COMS4281-Introduction-to-Quantum-Computing

./: README.md  pset4.ipynb
pset1-release-sept13/: pset1.ipynb  requirements.txt  utils.py
pset2-sept-27/: pset2-sept-27.ipynb  pyproject.toml  utils.py
pset3-oct-20/: pset3.ipynb  utils.py
pset5/: pset5.ipynb
qtugofwar/: GamePlayer.py  example_bot.py
